meti o script